--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,13 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+.list-group-item{
+  width: 272px;
+}
+
+.list-group{
+  display: block;
+  position: absolute;
+  z-index: 1;
+  right: 8px;
+}
