--- a/public/assests/Table V01_files/main.css
+++ b/public/assests/Table V01_files/main.css
@@ -90,7 +90,14 @@
             @media screen and (max-width:992px)
             {table{display:block}table>*,table tr,table td,table th{display:block}
             table thead{display:none}
-            table tbody tr{height:auto;padding:37px 0}table tbody tr td{padding-left:40%!important;margin-bottom:24px}table tbody tr td:last-child{margin-bottom:0}table tbody tr td:before{font-family:OpenSans-Regular;font-size:14px;color:#999;line-height:1.2;font-weight:unset;position:absolute;width:40%;left:30px;top:0}table tbody tr td:nth-child(1):before{content:"Date"}table tbody tr td:nth-child(2):before{content:"Order ID"}table tbody tr td:nth-child(3):before{content:"Name"}table tbody tr td:nth-child(4):before{content:"Price"}table tbody tr td:nth-child(5):before{content:"Quantity"}table tbody tr td:nth-child(6):before{content:"Total"}.column4,.column5,.column6{text-align:left}
+            table tbody tr{height:auto;padding:37px 0}table tbody tr td{padding-left:40%!important;margin-bottom:24px}table tbody tr td:last-child{margin-bottom:0}table tbody tr td:before{font-family:OpenSans-Regular;font-size:14px;color:#999;line-height:1.2;font-weight:unset;position:absolute;width:40%;left:30px;top:0}
+            table tbody tr td:nth-child(1):before{content:"From"}
+            table tbody tr td:nth-child(2):before{content:"To"}
+            table tbody tr td:nth-child(3):before{content:"Phone Number"}
+            table tbody tr td:nth-child(4):before{content:"Date"}
+            table tbody tr td:nth-child(5):before{content:"Type of Car"}
+            /* table tbody tr td:nth-child(6):before{content:"Total"} */
+            .column4,.column5,.column6{text-align:left}
             .column4,.column5,.column6,.column1,.column2,.column3{width:100%}
     tbody tr{font-size:14px}}
     @media(max-width:576px){.container-table100{padding-left:15px;padding-right:15px}}
