--- a/src/App.css
+++ b/src/App.css
@@ -79,24 +79,30 @@ body, div, table {
 .login-form{
   box-sizing: border-box;
   padding-top: 15px;
-  padding-bottom: 10%;
-  text-align: -webkit-center;
+  padding-bottom: 5%;
+  /* text-align: -webkit-center; */
+  text-align: center;
   background: #404040;
 }
-.login input[type="text"],.login input[type="password"],login input[type="submit"]{
+/* .login input[type="text"],.login input[type="password"],login input[type="submit"]{
   max-width: 400px;
   width: 80%;
   line-height: 4em;
-  /* margin: auto; */
+  margin: auto;
   border-radius: 5px;
   border: 2px solid #f2f2f2;
   outline: none;
   padding-left: 10px;
+} */
+.contact-md-4ths {
+  width: 80%;
+  float: unset;
+  margin: 15px 45px;
+  background: #fff;
+  padding: 12px 18px;
+  border-radius: 3px;
+  background-clip: padding-box;
 }
-.usernameBox{
-  margin-top: 50px;
-}
-
 #homepage-block-3 {
   background: #1F1F1F;
   background-repeat: no-repeat;
@@ -111,6 +117,9 @@ body, div, table {
    #homepage-block-3 {
      height: 720px !important; 
      padding-top: 108px;
+   }
+   .contact-md-4ths {
+    margin: 15px 35px;
    }
 }
 
